[package]
name = "tokenizers-wasm"
version = "0.1.0"
authors = ["Matthias Brunel <matthias.brunel@mithrilsecurity.io>", "Locria Cyber"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63" # "0.2.63", features = ["serde-serialize"]}
js-sys = "0.3.57"
wee_alloc = { version = "0.4.5", optional = true }
tokenizers = { default-features = false, features = ["unstable_wasm"], git = "https://github.com/huggingface/tokenizers" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
